--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "chalk": "^2.4.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "foreman": "^3.0.1",
+    "heroku": "^7.7.4",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.4",
