--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "foreman": "^3.0.1",
+    "helmet": "^3.13.0",
     "heroku": "^7.7.4",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.1",
